--- a/master/method_list.html
+++ b/master/method_list.html
@@ -54,8 +54,8 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="Vendi/Utils.html#asset_name-instance_method" title="Vendi::Utils#asset_name (method)">#asset_name</a></span>
-      <small>Vendi::Utils</small>
+      <span class='object_link'><a href="Vendi/Minter.html#asset_name-instance_method" title="Vendi::Minter#asset_name (method)">#asset_name</a></span>
+      <small>Vendi::Minter</small>
     </div>
   </li>
   
@@ -112,6 +112,22 @@
     <div class="item">
       <span class='object_link'><a href="Vendi/Utils.html#eventually-instance_method" title="Vendi::Utils#eventually (method)">#eventually</a></span>
       <small>Vendi::Utils</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Machine.html#failed_mints-instance_method" title="Vendi::Machine#failed_mints (method)">#failed_mints</a></span>
+      <small>Vendi::Machine</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Machine.html#failed_mints_path-instance_method" title="Vendi::Machine#failed_mints_path (method)">#failed_mints_path</a></span>
+      <small>Vendi::Machine</small>
     </div>
   </li>
   
@@ -182,13 +198,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="Vendi/Minter.html#keys_to_mint-instance_method" title="Vendi::Minter#keys_to_mint (method)">#keys_to_mint</a></span>
+      <small>Vendi::Minter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#logger-instance_method" title="Vendi::Machine#logger (method)">#logger</a></span>
       <small>Vendi::Machine</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata-instance_method" title="Vendi::Machine#metadata (method)">#metadata</a></span>
       <small>Vendi::Machine</small>
@@ -196,7 +220,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata_path-instance_method" title="Vendi::Machine#metadata_path (method)">#metadata_path</a></span>
       <small>Vendi::Machine</small>
@@ -204,7 +228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata_sent-instance_method" title="Vendi::Machine#metadata_sent (method)">#metadata_sent</a></span>
       <small>Vendi::Machine</small>
@@ -212,7 +236,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata_sent_path-instance_method" title="Vendi::Machine#metadata_sent_path (method)">#metadata_sent_path</a></span>
       <small>Vendi::Machine</small>
@@ -220,7 +244,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata_vending-instance_method" title="Vendi::Machine#metadata_vending (method)">#metadata_vending</a></span>
       <small>Vendi::Machine</small>
@@ -228,7 +252,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#metadata_vending_path-instance_method" title="Vendi::Machine#metadata_vending_path (method)">#metadata_vending_path</a></span>
       <small>Vendi::Machine</small>
@@ -236,7 +260,23 @@
   </li>
   
 
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Minter.html#metadatas-instance_method" title="Vendi::Minter#metadatas (method)">#metadatas</a></span>
+      <small>Vendi::Minter</small>
+    </div>
+  </li>
+  
+
   <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Minter.html#mint_nft-instance_method" title="Vendi::Minter#mint_nft (method)">#mint_nft</a></span>
+      <small>Vendi::Minter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Minter.html#mint_payload-instance_method" title="Vendi::Minter#mint_payload (method)">#mint_payload</a></span>
       <small>Vendi::Minter</small>
@@ -244,7 +284,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Minter.html#outgoing_tx_ok%3F-instance_method" title="Vendi::Minter#outgoing_tx_ok? (method)">#outgoing_tx_ok?</a></span>
       <small>Vendi::Minter</small>
@@ -252,7 +292,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Minter.html#prepare_metadata-instance_method" title="Vendi::Minter#prepare_metadata (method)">#prepare_metadata</a></span>
       <small>Vendi::Minter</small>
@@ -260,7 +300,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#serve-instance_method" title="Vendi::Machine#serve (method)">#serve</a></span>
       <small>Vendi::Machine</small>
@@ -268,9 +308,17 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Machine.html#set_config-instance_method" title="Vendi::Machine#set_config (method)">#set_config</a></span>
+      <small>Vendi::Machine</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Machine.html#set_failed_mints-instance_method" title="Vendi::Machine#set_failed_mints (method)">#set_failed_mints</a></span>
       <small>Vendi::Machine</small>
     </div>
   </li>
@@ -310,13 +358,21 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="Vendi/Minter.html#update_metadata_files-instance_method" title="Vendi::Minter#update_metadata_files (method)">#update_metadata_files</a></span>
+      <span class='object_link'><a href="Vendi/Minter.html#update_failed_mints-instance_method" title="Vendi::Minter#update_failed_mints (method)">#update_failed_mints</a></span>
       <small>Vendi::Minter</small>
     </div>
   </li>
   
 
   <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Vendi/Minter.html#update_metadata_files-instance_method" title="Vendi::Minter#update_metadata_files (method)">#update_metadata_files</a></span>
+      <small>Vendi::Minter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Vendi/Minter.html#wait_for_tx_in_ledger-instance_method" title="Vendi::Minter#wait_for_tx_in_ledger (method)">#wait_for_tx_in_ledger</a></span>
       <small>Vendi::Minter</small>
